<resources>
    <string name="app_name">Talkin</string>
    <string name="title_activity_main">Chat Group</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_hotspot">Start hotspot</string>
    <string name="write_text_hint">Write your message..</string>
    <string name="action_about">About</string>
    <string name="action_peer">Contacts</string>
    <string name="action_refresh">Refresh</string>
    <string name="ifNotConnected">Check your network!</string>
    <string name="ifNotConnectedHint">Connect to Wi-Fi network or choose Start hotspot form the Menu</string>
    <string name="title_activity_phone">Audio Chat</string>
    <string name="action_messenger">Messenger</string>
    <string name="action_attachment">Attachment</string>
    <string name="title_activity_phone_call">PhoneCallActivity</string>
    <string name="action_settings">Settings</string>
    <string name="call_in">Incoming call from</string>
    <string name="call_out">Trying to call..</string>
    <string name="title_activity_phone_in_calll">PhoneInCalllActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="txt_launch">Write your name to start talking</string>
</resources>