<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="indie.pfe.talkin.PhoneActivity">

    <item
        android:id="@+id/action_hotspot"
        android:orderInCategory="100"
        android:title="@string/action_hotspot"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messenger"
        android:icon="@drawable/ic_chat_white_24dp"
        android:orderInCategory="300"
        android:title="@string/action_messenger"
        app:showAsAction="ifRoom" />

</menu>
